# D2_Optical_Pumping

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/Berkeley/: Berkeley.md  Berkeley_meta.json
docs/OP1-B/: OP1-B.md  OP1-B_meta.json
notebook/: 4a.ipynb  4b.ipynb  4b_pre.ipynb  4c.ipynb  4d.ipynb  Optical_Pumping_Rate_Equation_Model.ipynb  water_data_analysis_tutorial.ipynb
reports/: main.tex  reference.bib
reports/Apparatus/: M-field.tex  RF.tex  Rubidium cell.tex  detector.tex  optics.tex  temp regulation.tex
reports/Theory/: 1.structure of Alkali atoms.tex  2.interaction in M-field.tex  3.Photon absorption.tex  4.OP of Rubidium.tex  5.Zero field transition.tex  6.RF spectroscopic.tex  7.transient eff.tex
reports/section/: 4a.tex  4b.tex  4c.tex  4d.tex  Q_and_A.tex  abstract.tex  apparatus_set_up.tex  optical_pumping_principle.tex
src/: __init__.py
src/analysis/: __init__.py  fitting.py  formatting.py
src/io/: __init__.py
src/logic/: __init__.py  tagger.py
src/signal/: __init__.py  detection.py  segmentation.py
src/uncertainty/: __init__.py  evaluation.py
src/utils/: __init__.py  file_parser.py
src/visualization/: __init__.py  plot_settings.py
tests/: test_analysis_utils.py  test_plot_settings.py
